--- a/frontend/src/components/profile/profile_css.scss
+++ b/frontend/src/components/profile/profile_css.scss
@@ -28,6 +28,16 @@
   flex-direction: column;
 }
 
+.fridge-names {
+  display: flex;
+  flex-direction: row;
+  padding-bottom: 10%;
+}
+
+.fridge-name {
+  padding-top: 5%;
+  padding-left: 5%;
+}
 
 
 .second-profile-container {
@@ -56,6 +66,7 @@
   font-size: 24px;
   padding: 10px;
   border-radius: 50px;
+  margin-right: 10%;
 }
 
 .add-new-fridge {
@@ -63,4 +74,9 @@
   align-items: center;
   justify-content: center;
   padding-bottom: 50px;
+}
+
+.today p,
+.calendar-profile p {
+  margin-top: 10%;
 }
