--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -10,7 +10,7 @@ html, body, header, nav, h1, a,
 ul, li, strong, main, button, i,
 section, img, div, h2, p, form,
 fieldset, label, input, textarea,
-span, article, footer, time, small {
+span, select, article, footer, time, small {
   margin: 0;
   padding: 0;
   border: 0;
