--- a/frontend/src/components/food_items/food_items_css.scss
+++ b/frontend/src/components/food_items/food_items_css.scss
@@ -122,12 +122,35 @@
   left: 22%;
   z-index: 7;
   width: 56%;
-  height: 350px; 
+  
   background-color: white;
   box-sizing: border-box;
   padding: 30px 5%;
   box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.25);
   border-radius: 23px;
+}
+
+.food-name-input {
+  width: 100%;
+  margin-top: 5%; 
+  margin-bottom: 5%;
+  position: relative; 
+} 
+
+.food-name-input-description {
+  position: absolute;
+  bottom: 115%;
+  width: 50%; 
+  left: 25%; 
+  color: $text-default; 
+  background-color: white;
+  text-align: center;
+  padding: 2%;
+  box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.25);
+}
+
+.food-name-input-description > p {
+  font-size: 11px; 
 }
 
 .food-modal-form-input {
@@ -138,6 +161,7 @@
 }
 
 .add-food-form-category_selector {
+  position: relative;
   display: flex;
   justify-content: center;
   text-align: left;
@@ -145,8 +169,22 @@
   background-color: $light-grey;
   border: 1px solid $dark-grey;
   border-radius: 5px;
+  margin-bottom: 5%;
   padding: 10px;
   width: 100%;
+  
+}
+
+.add-food-form-date-picker {
+  width: 100%;
+  position: relative;
+  margin-bottom: 5%;
+}
+
+.add-food-button {
+  width: 40%; 
+  min-width: 130px;
+  margin-top: 5%;
 }
 
 
