--- a/frontend/src/components/food_items/food_items_css.scss
+++ b/frontend/src/components/food_items/food_items_css.scss
@@ -29,6 +29,7 @@
   width: 60%;
   color: #C9D9DE;
   padding: 1% 20px; 
+  margin-bottom: 4%; 
 }
 
 #defaultTextStyles {
@@ -128,7 +129,9 @@
   top: 7%;
   left: 22%;
   z-index: 7;
-  width: 56%;
+  min-width: 220px;
+  width: 40%; 
+  max-width: 50%;
   background-color: white;
   box-sizing: border-box;
   padding: 30px 5%;
@@ -178,7 +181,33 @@
   margin-bottom: 5%;
   padding: 10px;
   width: 100%;
-  
+}
+
+.add-food-form-category_selector > select {
+  cursor: pointer;
+}
+
+.quantity-form-container {
+  display: flex;
+  justify-content: center;
+  color: $text-default-light;
+  background-color: $light-grey;
+  border: 1px solid $dark-grey;
+  width: 100%;
+  padding: 10px;
+  font-size: 13px;
+  border-radius: 5px;
+  margin-bottom: 5%;
+  position: relative;
+}
+
+.quanity-num {
+  margin: 0px 10% ; 
+}
+
+.quanity-minus:hover {
+  color: $text-default; 
+  cursor: pointer;
 }
 
 .add-food-form-date-picker {
@@ -188,11 +217,11 @@
 }
 
 .add-food-button {
-  width: 40%; 
+  width: 50%; 
   min-width: 130px;
+  max-width: 300px;
   margin-top: 5%;
-  max-height: 4%;
-  padding: 4% 25px;
+  padding: 20px 25px;  
   text-align: center;
 }
 
@@ -221,6 +250,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  cursor: pointer;
 }
 
 .food-item-category-item-inner > img {
@@ -228,4 +258,15 @@
   max-width: 200px;
   height: auto; 
   padding-bottom: 5%; 
+}
+
+.add-food-img-container {
+  display: flex;
+  justify-content: center;
+}
+
+.add-food-img-container > img {
+  margin: 5%;
+  width: 50%;
+  height: auto; 
 }
