--- a/frontend/src/components/session/login_form_css.scss
+++ b/frontend/src/components/session/login_form_css.scss
@@ -4,24 +4,27 @@
   background-color: $background-blue;
   padding-top: 7%;
   padding-bottom: 7%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .login-form-container {
   display: flex;
+  flex-direction: column;
+  // align-items: center;
+  justify-content: center;
   box-sizing: border-box;
   max-width: 38rem;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   background-color: white;
-  padding: 5%;
-  margin-left: 25%;
-  margin-right: 25%;
+  padding: 50px;
+  margin: 10px 50px 50px 50px;
   border-radius: 23px;
   box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.25);
 }
 
 .login-header {
+  text-align: center;
   font-weight: 700;
 }
 
@@ -34,8 +37,9 @@
 
 .signup-link {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   font-size: 14px;
   font-weight: 500;
 }
@@ -44,7 +48,6 @@
   color: $dark-blue;
   cursor: pointer;
   text-decoration: none;
-  padding: 0px 0px 0px 5px;
 }
 
 .signup-link-a:hover {
@@ -59,7 +62,6 @@
 }
 
 .login-fields > input {
-  margin-top: 5%;
   margin-bottom: 5%;
 }
 
@@ -69,14 +71,19 @@
 }
 
 .login-form-buttons {
+  padding: 10px 10px 10px 10px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
+  margin-top: 10px;
 }
 
 .demo-login-form-button {
+  width: 100%;
   background-color: $secondary-blue;
-  margin-top: 7%;
+  margin-top: 5%;
+  padding: 10px 0px 10px 0px;
+
 }
 
 .demo-login-form-button:hover {
@@ -85,8 +92,8 @@
 }
 
 .login-form-button {
-  margin-top: 7%;
-  margin-right: 10px;
+  width: 100%;
+  padding: 10px 0px 10px 0px;
 }
 
 .login-form-button:hover {
