--- a/frontend/src/components/food_items/food_items_css.scss
+++ b/frontend/src/components/food_items/food_items_css.scss
@@ -29,7 +29,7 @@
   width: 60%;
   color: #C9D9DE;
   padding: 1% 20px; 
-  margin-bottom: 4%; 
+  // margin-bottom: 4%; 
 }
 
 #defaultTextStyles {
@@ -220,7 +220,7 @@
   width: 50%; 
   min-width: 130px;
   max-width: 300px;
-  margin-top: 5%;
+  margin-top: 9%;
   padding: 20px 25px;  
   text-align: center;
 }
@@ -241,8 +241,8 @@
 .food-item-category-item {
   position: relative;
   width: 33%; 
-  margin-top: 5%; 
-  margin-bottom: 4%; 
+  margin-top: 9%; 
+  // margin-bottom: 4%; 
 }
 
 .food-item-category-item-inner {
