Add fridge modal form and modal container

--- a/frontend/src/components/profile/profile_css.scss
+++ b/frontend/src/components/profile/profile_css.scss
@@ -96,3 +96,15 @@
 .shopping-list-btn {
   padding: 10px 30px 10px 30px;
 }
+
+.add-fridge-button {
+  margin-top: 9%; 
+}
+
+.add-fridge-modal-form-input {
+  margin-top: 7%; 
+}
+
+.add-fridge-form > h1 {
+  margin-bottom: 5%;
+}
