Add non-working calendar and minor styling fixes

--- a/frontend/src/styles/vars.scss
+++ b/frontend/src/styles/vars.scss
@@ -1,6 +1,7 @@
 $background-color: #ffffff;
 $background-blue: #F6F9FA;
 $text-default: #242424;
+$lighter-grey: #F2F2F2;
 $light-grey: #F6F6F6;
 $dark-grey: #E3E3E3;
 $text-default-light: #A0A0A0;
