--- a/frontend/src/components/food_items/food_items_css.scss
+++ b/frontend/src/components/food_items/food_items_css.scss
@@ -56,6 +56,7 @@
   width: 45%;
   border: 1px solid #C9D9DE;
   background: white; 
+  box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.25);
 }
 
 .food-search-background {
@@ -87,6 +88,10 @@
 
 .food-search-list-item:hover > .food-search-list-item-icon {
   color: white;
+}
+
+#no-item-hover {
+  text-align: center;
 }
 
 #no-item-hover:hover {
@@ -242,7 +247,6 @@
   position: relative;
   width: 33%; 
   margin-top: 9%; 
-  // margin-bottom: 4%; 
 }
 
 .food-item-category-item-inner {
