Add about-us page and edit today component

--- a/frontend/src/styles/vars.scss
+++ b/frontend/src/styles/vars.scss
@@ -5,11 +5,10 @@ $lighter-grey: #F2F2F2;
 $light-grey: #F6F6F6;
 $dark-grey: #E3E3E3;
 $text-default-light: #A0A0A0;
-$default-light-blue: rgb(225, 247, 255);
 $default-blue: #A9DBEB;
 $secondary-blue: #8cc4d7;
 $default-blue-light: #C9D9DE;
-$default-blue-hover: #CBF3FF;
+$default-blue-hover: #acc4cb;
 $dark-blue: #5A8B9B;
 $error-red: #DB7D69;
 $error-yellow: #DBBB69;
