Add Footer fixes, and shopping list alignment

--- a/frontend/src/components/footer/footer_css.scss
+++ b/frontend/src/components/footer/footer_css.scss
@@ -11,7 +11,12 @@
   border-top: 2px solid white;
 }
 
-.footer, .our-names {
+.about-us-link {
+  color: $dark-blue;
+}
+
+.footer{
+  text-align: center;
   margin: 5px;
 }
 
