--- a/frontend/src/components/shopping_list/shopping_list_css.scss
+++ b/frontend/src/components/shopping_list/shopping_list_css.scss
@@ -6,6 +6,7 @@
 .shopping-list {
   text-align: center;
   max-width: 38rem;
+  min-width: 250px;
   display: flex; 
   flex-direction: column;
   align-items: center;
@@ -65,6 +66,5 @@
 }
 
 .add-items-btn {
-  padding: 3%; 
-  width: 30%; 
+  padding: 10px 20px 10px 20px; 
 }
