--- a/frontend/src/components/food_items/food_items_css.scss
+++ b/frontend/src/components/food_items/food_items_css.scss
@@ -163,7 +163,22 @@
   box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.25);
 }
 
+.food-date-input-description {
+  position: absolute;
+  top: 115%;
+  width: 50%; 
+  left: 25%; 
+  color: $text-default; 
+  background-color: white;
+  text-align: center;
+  padding: 2%;
+  box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.25);
+}
+
 .food-name-input-description > p {
+  font-size: 11px; 
+}
+.food-date-input-description > p {
   font-size: 11px; 
 }
 
