Let users toggle done on shopping list item

--- a/frontend/src/components/shopping_list/shopping_list_css.scss
+++ b/frontend/src/components/shopping_list/shopping_list_css.scss
@@ -65,6 +65,16 @@
   font-size: 20px;
 }
 
+.shopping-list-circle-icon-checked {
+  color: green;
+  margin: 15px;
+  font-size: 20px;
+}
+
 .add-items-btn {
   padding: 10px 20px 10px 20px; 
+}
+
+.shopping-list-category-items {
+  margin-top: 15px;
 }
