--- a/frontend/src/components/session/signup_form_css.scss
+++ b/frontend/src/components/session/signup_form_css.scss
@@ -9,6 +9,10 @@
   justify-content: center;
 }
 
+input::placeholder {
+  font-size: 10px;
+}
+
 .signup-form-container {
   display: flex;
   flex-direction: column;
