--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -88,7 +88,7 @@ button {
   border-radius: 50px;
   color: white;
   text-transform: none;
-  font-weight: 700;
+  // font-weight: 700;
   letter-spacing: 1px;
   font-size: 90%;
 }
