--- a/frontend/src/components/food_items/food_items_css.scss
+++ b/frontend/src/components/food_items/food_items_css.scss
@@ -221,11 +221,11 @@
   position: relative;
 }
 
-.quanity-num {
+.quantity-num {
   margin: 0px 10% ; 
 }
 
-.quanity-minus:hover {
+.quantity-minus:hover {
   color: $text-default; 
   cursor: pointer;
 }
