--- a/frontend/src/components/calendar/food_calendar_css.scss
+++ b/frontend/src/components/calendar/food_calendar_css.scss
@@ -92,7 +92,7 @@ button.Day-inner {
 
 .expiring-items-list {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   margin-bottom: 20px;
