Add expiration colors

--- a/frontend/src/components/fridge/fridge_css.scss
+++ b/frontend/src/components/fridge/fridge_css.scss
@@ -68,3 +68,15 @@
 #add-friends {
   background-color: $background-blue;
 }
+
+.greenExpColor {
+  color: #31ce7e; 
+}
+
+.yellowExpColor {
+  color: #cbbc1f; 
+}
+
+.redExpColor {
+  color: #e5574b;
+}
