--- a/frontend/src/components/fridge/fridge_css.scss
+++ b/frontend/src/components/fridge/fridge_css.scss
@@ -8,7 +8,7 @@
   align-items: center;
   justify-content: center;
   background-color: white;
-  padding: 5% 5% 5% 5%;
+  padding: 3% 5% 5% 5%;
   margin-top: 5%;
   margin-left: 20%;
   margin-right: 20%;
@@ -89,16 +89,30 @@
 .remove-fridge-question {
   font-size: 14px;
   margin-top: 5%;
+}
 
+.fridge-quantity-num {
+  padding: 10px 10px 10px 10px;
+}
+
+.fridge-quantity {
+  display: flex;
+  padding: 10px;
+  font-size: 15px;
+  letter-spacing: 1px;
+  color: $text-default;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .leave-fridge-btn {
   margin-top: 5%;
-  padding: 3% 5%;
+  padding: 10px 20px 10px 20px;
   background-color: $error-yellow;
 }
 
 .remove-fridge-form-button {
-  padding: 5%; 
+  padding: 10px 20px 10px 20px;
   background-color: $error-red;
 }
