Css fix and fridge

--- a/frontend/src/styles/vars.scss
+++ b/frontend/src/styles/vars.scss
@@ -1,6 +1,7 @@
 $background-color: #ffffff;
 $background-blue: #F6F9FA;
 $text-default: #242424;
+$text-default-medium: #4b4b4b;
 $lighter-grey: #F2F2F2;
 $light-grey: #F6F6F6;
 $dark-grey: #E3E3E3;
