--- a/frontend/src/components/shopping_list/shopping_list_css.scss
+++ b/frontend/src/components/shopping_list/shopping_list_css.scss
@@ -5,12 +5,8 @@
 
 .shopping-list {
   text-align: center;
-  max-width: 38rem;
-  min-width: 250px;
-  align-items: center;
-  justify-content: center;
   background-color: white;
-  padding: 10% 10% 10% 10%;
+  padding: 5% 5% 5% 5%;
   margin-top: 5%;
   margin-left: 30px;
   margin-right: 30px;
@@ -73,7 +69,7 @@
   justify-content: center;
 }
 
-.quantity-form-container {
+.quantity-form-container-shopping-list {
   width: 50px;
   height: 10px;
 }
