Finishing Heroku Touches

--- a/frontend/src/components/calendar/today_css.scss
+++ b/frontend/src/components/calendar/today_css.scss
@@ -79,3 +79,11 @@
   padding: 10px 20px 10px 20px;
   margin-bottom: 30px;
 }
+
+.today, .calendar-profile {
+  padding: 30px;
+}
+
+.today {
+  margin-right: 20px;
+}
