--- a/frontend/src/components/shopping_list/shopping_list_css.scss
+++ b/frontend/src/components/shopping_list/shopping_list_css.scss
@@ -59,6 +59,7 @@
 .belongs-to-fridge:hover {
   color: $default-blue-hover;
   font-size: 12px;
+  cursor: pointer;
 }
 
 .shopping-list-item-details {
