--- a/frontend/src/components/splash/splash_css.scss
+++ b/frontend/src/components/splash/splash_css.scss
@@ -7,22 +7,43 @@
   align-items: center;
 }
 
-.splash-page h1 {
-  padding: 30px 10px 10px 10px;
+.member-login {
+  margin-top: 30px;
+  font-size: 12px;
 }
 
 .splash-page p {
-  padding-bottom: 30px;
+  margin: 20px 0px 10px 0px;
+}
+
+.splash-member {
+  color: $dark-blue;
+
+}
+
+.splash-about-us {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: white;
+  width: 100%;
+  border-bottom: 1px solid $background-blue;
+  padding: 20px 0px 20px 0px;
+}
+
+.splash-about-us > button {
+  margin-top: 15px;
+  padding: 10px 20px 10px 20px;
 }
 
 .splash-01 {
   display: flex;
   flex-direction: row;
-  background-color: white;
+  // background-color: white;
   align-items: center;
   justify-content: center;
   text-align: center;
-  padding: 0px 50px 0px 30px;
+  padding: 30px 50px 0px 0px;
 }
 
 .splash-hero-img {
@@ -40,17 +61,18 @@
   align-items: center;
   text-align: center;
   justify-content: center;
+  background-color: white;
   padding: 50px;
 }
 
 .egg-splash {
   padding: 10px;
-  height: 50%;
-  width: 50%;
+  height: 30%;
+  width: 30%;
 }
 
 .splash-03 {
-  background-color: white;
+  // background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
