--- a/frontend/src/components/food_items/food_items_css.scss
+++ b/frontend/src/components/food_items/food_items_css.scss
@@ -230,6 +230,10 @@
   cursor: pointer;
 }
 
+.quantity-min {
+  color: $text-default-light; 
+}
+
 .add-food-form-date-picker {
   width: 100%;
   position: relative;
