Add delete shopping list item and styling

--- a/frontend/src/components/shopping_list/shopping_list_css.scss
+++ b/frontend/src/components/shopping_list/shopping_list_css.scss
@@ -117,3 +117,13 @@
   margin-top: 20px;
   margin-bottom: 20px;
 }
+
+.x-shopping-list {
+  color: $text-default;
+  -webkit-transition: all .2s ease-in-out;
+}
+
+.x-shopping-list:hover {
+  -webkit-transition: all .2s ease-in-out;
+  color: $error-red;
+}
