--- a/frontend/src/components/food_items/food_items_css.scss
+++ b/frontend/src/components/food_items/food_items_css.scss
@@ -132,16 +132,18 @@
   text-align: center;
   position: fixed;
   top: 7%;
-  left: 22%;
+  left: 25%;
   z-index: 7;
+  width: 50%;
   min-width: 220px;
-  width: 40%; 
-  max-width: 50%;
+  max-width: 700px; 
   background-color: white;
   box-sizing: border-box;
   padding: 30px 5%;
   box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.25);
   border-radius: 23px;
+  max-height: 100%; 
+  overflow-y: auto; 
 }
 
 .food-name-input {
