--- a/frontend/src/components/aboutus/about_us_css.scss
+++ b/frontend/src/components/aboutus/about_us_css.scss
@@ -78,3 +78,14 @@
 .about-icon:hover {
   color: $default-blue-hover;
 }
+
+.return-home-about {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.return-home-about > button {
+  padding: 10px 20px 10px 20px;
+
+}
